Done page with graphics

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -42,5 +42,8 @@
   "repository": {
     "type": "git",
     "url": "https://git.miem.hse.ru/787/heat-map-test.git"
+  },
+  "devDependencies": {
+    "prettier": "2.5.1"
   }
 }
