--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "heatmap.js": "^2.0.5",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -45,6 +46,8 @@
     "url": "https://git.miem.hse.ru/787/heat-map-test.git"
   },
   "devDependencies": {
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "webpack": "^5.71.0",
+    "webpack-dev-server": "^4.8.1"
   }
 }
